# robot-arm

./: .gitignore  README.md
src/: project_report.md  requirement.txt
src/my_robot/: package.xml  setup.py
src/my_robot/my_robot/: publisher.py  subscriber.py
src/my_robot_arm_control/: package.xml  setup.cfg  setup.py
src/my_robot_arm_control/config/: ros2_controllers.yaml
src/my_robot_arm_control/launch/: robot_control.launch.py
src/my_robot_arm_description/: package.xml  setup.cfg  setup.py
src/my_robot_arm_description/config/: initial_positions.yaml
src/my_robot_arm_description/launch/: display.launch.py
src/my_robot_arm_description/rviz/: display.rviz
src/my_robot_arm_description/urdf/: my_robot_arm.urdf.xacro  panda_arm.ros2_control.xacro  panda_hand.ros2_control.xacro
src/my_robot_arm_gazebo/: package.xml  setup.cfg  setup.py
src/my_robot_arm_gazebo/launch/: gazebo.launch.py
src/my_robot_arm_gazebo/worlds/: pick_place_world.sdf
src/my_robot_arm_moveit_config/: package.xml  setup.cfg  setup.py
src/my_robot_arm_moveit_config/config/: moveit_controllers.yaml  moveit_cpp.yaml  panda.srdf
src/my_robot_arm_moveit_config/launch/: moveit.launch.py
src/my_robot_arm_pick_place/: package.xml  setup.cfg  setup.py
src/my_robot_arm_pick_place/config/: pick_place_params.yaml
src/my_robot_arm_pick_place/launch/: pick_place.launch.py  pick_place_gazebo.launch.py
src/my_robot_arm_pick_place/my_robot_arm_pick_place/: pick_place_node.py
src/my_robot_description/: issues_report.md  package.xml  setup.py
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: display.rviz
src/my_robot_description/urdf/: my_robot.urdf
src/my_service/: package.xml  setup.py
src/my_service/my_service/: client.py  server.py
