<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_arm_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt 2 configuration for Panda arm pick and place</description>
  <maintainer email="ducduydao12112004@gmail.com">ddd</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <exec_depend>my_robot_arm_description</exec_depend>
  <exec_depend>my_robot_arm_control</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
