<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_arm_pick_place</name>
  <version>0.0.0</version>
  <description>Pick and place logic for Panda arm</description>
  <maintainer email="ducduydao12112004@gmail.com">ddd</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>

  <exec_depend>my_robot_arm_description</exec_depend>
  <exec_depend>my_robot_arm_control</exec_depend>
  <exec_depend>my_robot_arm_moveit_config</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
